--- a/www.pbssoft.com/www.pbssoft.com/free-training-schedules.html
+++ b/www.pbssoft.com/www.pbssoft.com/free-training-schedules.html
@@ -1084,8 +1084,8 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     <ul class="submenu">
                                         <li><a href="online-training-schedules.html">Online Training</a></li>
                                         <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
-                                          <li><a href="free-training-schedules.html">Free Training</a></li>
+                                        <li><a href="weekend-workshops.html">Workshops</a></li>
+  
                                     </ul>
                                 </li>
                                <!-- <li>
@@ -1360,7 +1360,7 @@ background: #FFF;
       <div class="carousel-item active">
         <img class="d-block w-100" src="https://www.pbssoft.com/assets/frontend/images/weekendworkshop-banner01.png" alt="First slide">
         <div class="carousel-caption sub-banner-caption d-md-block">
-          <h2 class="wow fadeInUp animated" style="visibility: visible;"><b>Weekend Workshops</b></h2>
+          <h2 class="wow fadeInUp animated" style="visibility: visible;"><b>Workshops</b></h2>
         </div>
       </div>
     </div>
@@ -2658,7 +2658,7 @@ background: #FFF;
                                         <li><a href="about-us.html">About us</a></li>
                                         <li><a href="online-training-schedules.html">Online Batches</a></li>
                                     <li><a href="classroom-training-schedules.html">Classroom Batches</a></li>
-                                       <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
+                                       <li><a href="weekend-workshops.html">Workshops</a></li>
                                         <!--<li><a href="javascript:void(0);">Pay Now</a></li>-->
                                         <li><a href="contact-us.html">Contact us</a></li>
                         
