--- a/www.pbssoft.com/www.pbssoft.com/index.html
+++ b/www.pbssoft.com/www.pbssoft.com/index.html
@@ -1091,8 +1091,8 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     <ul class="submenu">
                                         <li><a href="online-training-schedules.html">Online Training</a></li>
                                         <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
-                                          <li><a href="free-training-schedules.html">Free Training</a></li>
+                                        <li><a href="weekend-workshops.html">Workshops</a></li>
+  
                                     </ul>
                                 </li>
                                <!-- <li>
@@ -2070,7 +2070,7 @@ $(window).on('load',function(){
                        <img data-src="https://www.pbssoft.com/assets/frontend/images/conference.png" alt="conference" class="center serviceImg lazyload" loading="lazy">
                     </span>
                   <div class="ml-3">
-                       <h3>Weekend Workshops</h3>
+                       <h3>Workshops</h3>
                   </div>                    
                     </div>
               </a>
@@ -2661,7 +2661,7 @@ $(document).ready(function(){
                                         <li><a href="about-us.html">About us</a></li>
                                         <li><a href="online-training-schedules.html">Online Batches</a></li>
                                     <li><a href="classroom-training-schedules.html">Classroom Batches</a></li>
-                                       <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
+                                       <li><a href="weekend-workshops.html">Workshops</a></li>
                                         <!--<li><a href="javascript:void(0);">Pay Now</a></li>-->
                                         <li><a href="contact-us.html">Contact us</a></li>
                         
