--- a/www.pbssoft.com/www.pbssoft.com/interview-questions/top-250-devops-interview-questions-answers-ashok-it.html
+++ b/www.pbssoft.com/www.pbssoft.com/interview-questions/top-250-devops-interview-questions-answers-ashok-it.html
@@ -1084,7 +1084,7 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     <ul class="submenu">
                                         <li><a href="../online-training-schedules.html">Online Training</a></li>
                                         <li><a href="../classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="../weekend-workshops.html">Weekend Workshops</a></li>
+                                        <li><a href="../weekend-workshops.html">Workshops</a></li>
                                           <li><a href="../free-training-schedules.html">Free Training</a></li>
                                     </ul>
                                 </li>
@@ -11886,7 +11886,7 @@ position: -webkit-sticky;
                        <img src="../assets/frontend/images/conference.png" class="center serviceImg">
                     </span>
                   <div class="ml-3">
-                       <h3>Weekend Workshops</h3>
+                       <h3>Workshops</h3>
                   </div>
                        </div>
               </a>
@@ -13360,7 +13360,7 @@ float: left;
                                         <li><a href="../about-us.html">About us</a></li>
                                         <li><a href="../online-training-schedules.html">Online Batches</a></li>
                                     <li><a href="../classroom-training-schedules.html">Classroom Batches</a></li>
-                                       <li><a href="../weekend-workshops.html">Weekend Workshops</a></li>
+                                       <li><a href="../weekend-workshops.html">Workshops</a></li>
                                         <!--<li><a href="javascript:void(0);">Pay Now</a></li>-->
                                         <li><a href="../contact-us.html">Contact us</a></li>
                         
