--- a/www.pbssoft.com/www.pbssoft.com/java-new-features-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/java-new-features-online-training.html
@@ -1087,8 +1087,8 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     <ul class="submenu">
                                         <li><a href="online-training-schedules.html">Online Training</a></li>
                                         <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
-                                          <li><a href="free-training-schedules.html">Free Training</a></li>
+                                        <li><a href="weekend-workshops.html">Workshops</a></li>
+  
                                     </ul>
                                 </li>
                                <!-- <li>
@@ -2997,7 +2997,7 @@ float: left;
                                         <li><a href="about-us.html">About us</a></li>
                                         <li><a href="online-training-schedules.html">Online Batches</a></li>
                                     <li><a href="classroom-training-schedules.html">Classroom Batches</a></li>
-                                       <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
+                                       <li><a href="weekend-workshops.html">Workshops</a></li>
                                         <!--<li><a href="javascript:void(0);">Pay Now</a></li>-->
                                         <li><a href="contact-us.html">Contact us</a></li>
                         
