--- a/www.pbssoft.com/www.pbssoft.com/java-realtime-project-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/java-realtime-project-online-training.html
@@ -1087,8 +1087,8 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     <ul class="submenu">
                                         <li><a href="online-training-schedules.html">Online Training</a></li>
                                         <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="weekend-workshops.html">Weekend Workshops</a></li>
-                                          <li><a href="free-training-schedules.html">Free Training</a></li>
+                                        <li><a href="weekend-workshops.html">Workshops</a></li>
+  
                                     </ul>
                                 </li>
                                <!-- <li>
