updated course preview link

--- a/www.pbssoft.com/www.pbssoft.com/internship-detail.html
+++ b/www.pbssoft.com/www.pbssoft.com/internship-detail.html
@@ -1365,7 +1365,7 @@ background: #FFF;
   
       <tr>
               <td data-label="Sl.No"><span class="mbl-left"> 1  </span>  </td>
-        <td data-label="Company Name"> <span class="mbl-left">Oracle </span> </td>
+        <td data-label="Company Name"> <span class="mbl-left">Pbssoft</span> </td>
         <td data-label="Position"> <span class="mbl-left">1 </span> </td>
         <td data-label="Description"> <span class="mbl-left"> </span> </td>
         <td data-label="Years of Exp"> <span class="mbl-left">0-1 Year </span> </td>
