--- a/www.pbssoft.com/www.pbssoft.com/placements.html
+++ b/www.pbssoft.com/www.pbssoft.com/placements.html
@@ -1405,7 +1405,7 @@ background: #FFF;
      <div class="item clearfix" >
          <div class="first-item"> <h4>1</h4> </div>
          <div class="second-item">
-               <h4>Deloitte</h4>
+               <h4>IBM</h4>
                 <p><span>Position:</span> Java Trained Fresher</p>
                 <p><span>Package:</span> </p>
                 <p><span>Exp:</span> 0-1 Year</p>
@@ -1422,8 +1422,8 @@ background: #FFF;
      <div class="item clearfix" >
          <div class="first-item"> <h4>2</h4> </div>
          <div class="second-item">
-               <h4>TCS</h4>
-                <p><span>Position:</span> Java Trained Fresher</p>
+               <h4>Hooperlabs</h4>
+                <p><span>Position:</span>Web Developer</p>
                 <p><span>Package:</span> </p>
                 <p><span>Exp:</span> 0 - 4 Years</p>
         <div class="last-item">
