--- a/www.pbssoft.com/www.pbssoft.com/data-structures-algorithms-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/data-structures-algorithms-online-training.html
@@ -2231,7 +2231,7 @@ box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
              
                   <div class="mt8">
 
-            <a href='https://www.youtube.com/watch?v=Wcw9QcNG-7Y&amp;list=PLpLBSl8eY8jS4IH732Paby2Wqoz-lmBAC' target="_blank" class="btn btn-filled course-landing-buy_32846" style="width:100%;margin-bottom:5px;"><i class="btn-loader fa fa-spinner fa-spin" style="display:none;"></i>  Watch Demo Class</a>
+            <a href='' target="_blank" class="btn btn-filled course-landing-buy_32846" style="width:100%;margin-bottom:5px;"><i class="btn-loader fa fa-spinner fa-spin" style="display:none;"></i>  Watch Demo Class</a>
           </div>
                                    <div class="mt8">
               <a href='uploads/course/1359274417_1636448852.pdf' target="_blank" class="btn open-signup-course-freepreview enrollFree enrollFree_32846" style="width:100%;"> Download Course Content</a>
