--- a/www.pbssoft.com/www.pbssoft.com/advanced-java-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/advanced-java-online-training.html
@@ -1108,6 +1108,16 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                     </ul>
                                 </li>
                                 <li>
+<li>                                <a href="career.html"> Realtime Tools <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                <ul class="submenu">
+                                      <li><a href="build.html" target="_blank">Build Management</a></li>
+                                      <li><a href="unittest.html" target="_blank">Unit Testing</a></li>
+                                      <li><a href="integrated-dev.html" target="_blank">IDE Tools</a></li>
+                                      <li><a href="version.html" target="_blank" >Version Controll Systems</a></li>
+                                      <li><a href="logging.html" target="_blank">Logging Frameworks</a></li>
+                                  </ul>
+                              </li>
+                                <li>
                                     <a href="about-us.html">About Us</a>
                                 </li>
                                 <li>
