--- a/www.pbssoft.com/www.pbssoft.com/courses-offering.html
+++ b/www.pbssoft.com/www.pbssoft.com/courses-offering.html
@@ -1401,7 +1401,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="advanced-java-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/advanced-java-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/advanced-java-online-training.jpeg" alt="0"
                       title="Advanced Java" class=" lazyloaded" loading="lazy"
                       src="uploads/course/advanced-java-online-training.jpg">
                   </a>
@@ -1445,7 +1445,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="spring-boot-microservices-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/spring-boot-microservices-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/spring-boot-microservices-online-training.jpeg" alt="0"
                       title="Spring Boot & Microservices" class=" lazyloaded" loading="lazy"
                       src="uploads/course/spring-boot-microservices-online-training.jpg">
                   </a>
@@ -1489,7 +1489,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="java-realtime-project-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/java-realtime-project-online-training.png" alt="java project"
+                    <img data-src="https://www.pbssoft.com/uploads/course/java-realtime-project-online-training.png" alt="java project"
                       title="Java Realtime Project" class=" lazyloaded" loading="lazy"
                       src="uploads/course/java-realtime-project-online-training.png">
                   </a>
@@ -1533,7 +1533,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="java-fullstack-developer-course.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/java-fullstack-development-online-training.jpeg" alt="Java Fullstack Developer "
+                    <img data-src="https://www.pbssoft.com/uploads/course/java-fullstack-development-online-training.jpeg" alt="Java Fullstack Developer "
                       title="Java Fullstack Developer Course " class=" lazyloaded" loading="lazy"
                       src="uploads/course/java-fullstack-development-online-training.jpg">
                   </a>
@@ -1625,7 +1625,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="html-css-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/html-css-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/html-css-online-training.jpg" alt="0"
                       title="HTML & CSS" class=" lazyloaded" loading="lazy"
                       src="uploads/course/html-css-online-training.jpg">
                   </a>
@@ -1669,7 +1669,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="angular-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/angular-online-training.png" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/angular-online-training.png" alt="0"
                       title="Angular " class=" lazyloaded" loading="lazy"
                       src="uploads/course/angular-online-training.png">
                   </a>
@@ -1713,7 +1713,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="react-js-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/react-js-online-training.png" alt=""
+                    <img data-src="https://www.pbssoft.com/uploads/course/react-js-online-training.png" alt=""
                       title="React JS" class=" lazyloaded" loading="lazy"
                       src="uploads/course/react-js-online-training.png">
                   </a>
@@ -1757,7 +1757,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="node-js-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/1086991808_1641188246.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/1086991808_1641188246.jpg" alt="0"
                       title="Node JS" class=" lazyloaded" loading="lazy"
                       src="uploads/course/1086991808_1641188246.jpg">
                   </a>
@@ -1801,7 +1801,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="ui-fullstack-development-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/ui-fullstack-development-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/ui-fullstack-development-online-training.jpeg" alt="0"
                       title="UI Fullstack Development" class=" lazyloaded" loading="lazy"
                       src="uploads/course/ui-fullstack-development-online-training.jpg">
                   </a>
@@ -1849,7 +1849,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="python-fullstack-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/python-fullstack-online-training.jpeg" alt="Python Fullstack"
+                    <img data-src="https://www.pbssoft.com/uploads/course/python-fullstack-online-training.jpeg" alt="Python Fullstack"
                       title="Python Fullstack" class=" lazyloaded" loading="lazy"
                       src="uploads/course/python-fullstack-online-training.jpg">
                   </a>
@@ -1985,7 +1985,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="data-structures-algorithms-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/DATA STURCTURE.jpg" alt=""
+                    <img data-src="https://www.pbssoft.com/uploads/course/DATA STURCTURE.jpg" alt=""
                       title="Data Structures & Algorithms" class=" lazyloaded" loading="lazy"
                       src="uploads/course/DATA%20STURCTURE.jpg">
                   </a>
@@ -2033,7 +2033,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="system-design-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/system-design-online-training.jpg" alt=""
+                    <img data-src="https://www.pbssoft.com/uploads/course/system-design-online-training.jpg" alt=""
                       title="System Design" class=" lazyloaded" loading="lazy"
                       src="uploads/course/system-design-online-training.jpg">
                   </a>
@@ -2081,7 +2081,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="devops-with-aws-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/devops-with-aws-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/devops-with-aws-online-training.jpeg" alt="0"
                       title="DevOps with AWS" class=" lazyloaded" loading="lazy"
                       src="uploads/course/devops-with-aws-online-training.jpg">
                   </a>
@@ -2125,7 +2125,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="docker-kubernetes-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/docker-kubernetes-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/docker-kubernetes-online-training.jpeg" alt="0"
                       title="Docker & Kubernetes" class=" lazyloaded" loading="lazy"
                       src="uploads/course/docker-kubernetes-online-training.jpg">
                   </a>
@@ -2173,7 +2173,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="salesforce-crm-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/salesforce-crm-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/salesforce-crm-online-training.jpg" alt="0"
                       title="Salesforce CRM" class=" lazyloaded" loading="lazy"
                       src="uploads/course/salesforce-crm-online-training.jpg">
                   </a>
@@ -2217,7 +2217,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="aws-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/aws-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/aws-online-training.jpg" alt="0"
                       title="AWS" class=" lazyloaded" loading="lazy"
                       src="uploads/course/aws-online-training.jpg">
                   </a>
@@ -2309,7 +2309,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="software-testing-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/software-testing-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/software-testing-online-training.jpg" alt="0"
                       title="Software Testing" class=" lazyloaded" loading="lazy"
                       src="uploads/course/software-testing-online-training.jpg">
                   </a>
@@ -2401,7 +2401,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="data-science-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/data-science-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/data-science-online-training.jpeg" alt="0"
                       title="Data Science" class=" lazyloaded" loading="lazy"
                       src="uploads/course/data-science-online-training.jpg">
                   </a>
@@ -2449,7 +2449,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="mulesoft-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/mulesoft-online-training.jpeg" alt=""
+                    <img data-src="https://www.pbssoft.com/uploads/course/mulesoft-online-training.jpeg" alt=""
                       title="Mulesoft" class=" lazyloaded" loading="lazy"
                       src="uploads/course/mulesoft-online-training.jpg">
                   </a>
@@ -2497,7 +2497,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="power-bi-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/power-bi-online-training.jpeg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/power-bi-online-training.jpeg" alt="0"
                       title="Power BI" class=" lazyloaded" loading="lazy"
                       src="uploads/course/power-bi-online-training.jpg">
                   </a>
@@ -2545,7 +2545,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="linux-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/linux-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/linux-online-training.jpg" alt="0"
                       title="Linux" class=" lazyloaded" loading="lazy"
                       src="uploads/course/linux-online-training.jpg">
                   </a>
@@ -2593,7 +2593,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="c-language-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/c-language-online-training.jpg" alt=""
+                    <img data-src="https://www.pbssoft.com/uploads/course/c-language-online-training.jpg" alt=""
                       title="C - Language" class=" lazyloaded" loading="lazy"
                       src="uploads/course/c-language-online-training.jpg">
                   </a>
@@ -2641,7 +2641,7 @@ background: #FFF;
               <div class="courses-wrapper course-radius-none mb-30">
                 <div class="courses-thumb" style="overflow:hidden;">
                   <a href="oracle-online-training.html" tabindex="0">
-                    <img data-src="https://www.pbssoft.com/./uploads/course/oracle-online-training.jpg" alt="0"
+                    <img data-src="https://www.pbssoft.com/uploads/course/oracle-online-training.jpg" alt="0"
                       title="Oracle" class=" lazyloaded" loading="lazy"
                       src="uploads/course/oracle-online-training.jpg">
                   </a>
