home page images

--- a/www.pbssoft.com/www.pbssoft.com/index.html
+++ b/www.pbssoft.com/www.pbssoft.com/index.html
@@ -1470,7 +1470,8 @@ $(window).on('load',function(){
       <div class="main_services text-center">
           <div class="courses-wrapper course-radius-none mb-30">
   <div class="courses-thumb" style="overflow:hidden;">
-  <a href="spring-boot-microservices-online-training.html" tabindex="0"><img data-src="uploads/course/spring-boot-microservices-online-training.jpeg" alt="java project" title="Spring Boot & Microservices" class="lazyload" loading="lazy"></a>
+  <a href="spring-boot-microservices-online-training.html" tabindex="0">
+    <img data-src="uploads/course/spring-boot-microservices-online-training.png" src="uploads/course/spring-boot-microservices-online-training.jpeg" alt="java project" title="Spring Boot & Microservices" class="lazyload" loading="lazy"></a>
   </div>
   
   <div class="course-main-content clearfix">
@@ -1566,7 +1567,7 @@ $(window).on('load',function(){
       <div class="main_services text-center">
           <div class="courses-wrapper course-radius-none mb-30">
   <div class="courses-thumb" style="overflow:hidden;">
-  <a href="java-fullstack-developer-course.html" tabindex="0"><img data-src="uploads/course/java-fullstack-development-online-training.jpeg" alt="Java Fullstack Developer " title="Java Fullstack Developer Course " class="lazyload" loading="lazy"></a>
+  <a href="java-fullstack-developer-course.html" tabindex="0"><img data-src="uploads/course/java-fullstack-development-online-training.png" alt="Java Fullstack Developer " title="Java Fullstack Developer Course " class="lazyload" loading="lazy"></a>
   </div>
   
   <div class="course-main-content clearfix">
@@ -1614,7 +1615,7 @@ $(window).on('load',function(){
       <div class="main_services text-center">
           <div class="courses-wrapper course-radius-none mb-30">
   <div class="courses-thumb" style="overflow:hidden;">
-  <a href="devops-with-aws-online-training.html" tabindex="0"><img data-src="uploads/course/devops-with-aws-online-training.jpeg" alt="0" title="DevOps with AWS" class="lazyload" loading="lazy"></a>
+  <a href="devops-with-aws-online-training.html" tabindex="0"><img data-src="uploads/course/devops-with-aws-online-training.png" alt="0" title="DevOps with AWS" class="lazyload" loading="lazy"></a>
   </div>
   
   <div class="course-main-content clearfix">
