--- a/www.pbssoft.com/www.pbssoft.com/devops-with-aws-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/devops-with-aws-online-training.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta property="og:title" content="DevOps with AWS Engineer Certification Online Training Course| 2023 | Pbssoft IT" />
-  <meta property="og:image" content="uploads/course/devops-with-aws-online-training.jpg" />
+  <meta property="og:image" content="uploads/course/devops-with-aws-online-training.png" />
   <meta property="og:url" content="devops-with-aws-online-training.html" />
   <meta property="og:description" content="Pbssoft IT helps you for build your DevOps skills with this advanced training course. DevOps with AWS Online Training, Ansible, Github, Docker, Jenkins." />
   <meta property="og:site_name" content="Pbssoft IT - Software Training Institute" />
