--- a/www.pbssoft.com/www.pbssoft.com/free-training-schedules.html
+++ b/www.pbssoft.com/www.pbssoft.com/free-training-schedules.html
@@ -1851,7 +1851,7 @@ background: #FFF;
                                                 </a>
         </span>
       </td>
-    <td data-label="Trainer"> <span class="mbl-left">Mr. Ravikanth</span></td>
+    <td data-label="Trainer"> <span class="mbl-left">Mr. Sreekanth</span></td>
       <td data-label="Start Date"> <span class="mbl-left">06-Mar</span> </td>
       <td data-label="Time"> <span class="mbl-left">11:00AM</span></td>
       <td data-label="Zoom Link">  <span class="mbl-left"><em style="color:red;"></em>
@@ -2069,7 +2069,7 @@ background: #FFF;
                                                 </a>
         </span>
       </td>
-    <td data-label="Trainer"> <span class="mbl-left">Mr. Ram</span></td>
+    <td data-label="Trainer"> <span class="mbl-left">Mr.Pratap</span></td>
       <td data-label="Start Date"> <span class="mbl-left">28-Feb</span> </td>
       <td data-label="Time"> <span class="mbl-left">7:00PM</span></td>
       <td data-label="Zoom Link">  <span class="mbl-left"><em style="color:red;"></em>
