--- a/www.pbssoft.com/www.pbssoft.com/internship-detail.html
+++ b/www.pbssoft.com/www.pbssoft.com/internship-detail.html
@@ -1417,7 +1417,7 @@ background: #FFF;
 
                 </div>
                 <div class="adv_img_content">
-                    <h5><b>Career Exploration</b></h5>
+                    <h5><b>Career Skills</b></h5>
                     <p>Internship allows you to explore career option</p>
                 </div>
              </div>
@@ -1425,10 +1425,12 @@ background: #FFF;
              <div class="col-md-6 col-lg-3 wow fadeInUp">
                 <div class="adv_box">
                 <div class="advimg1">
-                    <img data-src="assets/frontend/images/Related_Work_Experience.png" alt="related work experience" class="lazyload" loading="lazy">
+                    <img data-src="assets/frontend/images/Related_Work_Experience.png" alt="Work Experience
+" class="lazyload" loading="lazy">
                 </div>
                 <div class="adv_img_content">
-                    <h5><b>Related Work Experience</b></h5>
+                    <h5><b>Work Experience
+</b></h5>
                     <p>Internship allows you to explore career option</p>
                 </div>
              </div>
@@ -1436,7 +1438,7 @@ background: #FFF;
              <div class="col-md-6 col-lg-3 wow fadeInUp">
                 <div class="adv_box">
                 <div class="advimg1 adv-img">
-                    <img data-src="assets/frontend/images/academic.jpg" alt="academic" class="lazyload" loading="lazy">
+                    <img data-src="assets/frontend/images/academic.png" alt="academic" class="lazyload" loading="lazy">
                 </div>
                 <div class="adv_img_content">
                     <h5><b>Academic Credit</b></h5>
