--- a/www.pbssoft.com/www.pbssoft.com/java-fullstack-developer-course.html
+++ b/www.pbssoft.com/www.pbssoft.com/java-fullstack-developer-course.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta property="og:title" content="Java Full Stack Developer Course - 2023 - Pbssoft IT " />
-  <meta property="og:image" content="uploads/course/java-fullstack-development-online-training.jpg" />
+  <meta property="og:image" content="uploads/course/java-fullstack-development-online-training.png" />
   <meta property="og:url" content="java-fullstack-developer-course.html" />
   <meta property="og:description" content="Looking to become Java Full Stack Developer? Gain skills with best Java Full Stack Developer course and land your dream job. Learn the required Java Full Stack Developer skills and explore lucrative Java Full Stack Developer jobs. " />
   <meta property="og:site_name" content="Pbssoft IT - Software Training Institute" />
