--- a/www.pbssoft.com/www.pbssoft.com/spring-boot-microservices-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/spring-boot-microservices-online-training.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta property="og:title" content="Spring Boot Training Hyderabad | 2023 | Pbssoft IT " />
-  <meta property="og:image" content="uploads/course/spring-boot-microservices-online-training.jpg" />
+  <meta property="og:image" content="uploads/course/spring-boot-microservices-online-training.png" />
   <meta property="og:url" content="spring-boot-microservices-online-training.html" />
   <meta property="og:description" content="Spring Boot  Microservices Online Training - This course offers Spring Boot and its major features. Kubernetes for Beginners: Google Cloud, AWS & Azure · Java Spring & Apache Kafka Bootcamp - Basic to Complete.
 " />
@@ -3232,7 +3232,7 @@ float: left;
                                 </div>
                               
                               <div class="footer-contact-list1 mt-md-0 mt-2">
-                                <a href="https://chat.whatsapp.com/J56RTFXMig2KnW01GHbfDl" target="_blank" class="link_blink">Click Here To Join Our Whatsapp Group For Latest Updates</a>
+                                <a class="social-button whatsup" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !. How can we help you?" "="" target="_blank"></a>
                               </div>
                                 <div class="footer-socila-icon">
                                     <span>Follow Us</span>
