--- a/www.pbssoft.com/www.pbssoft.com/ui-fullstack-development-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/ui-fullstack-development-online-training.html
@@ -3150,7 +3150,7 @@ float: left;
                                 </div>
                               
                               <div class="footer-contact-list1 mt-md-0 mt-2">
-                                <a href="https://chat.whatsapp.com/J56RTFXMig2KnW01GHbfDl" target="_blank" class="link_blink">Click Here To Join Our Whatsapp Group For Latest Updates</a>
+                                <a class="social-button whatsup" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !. How can we help you?" "="" target="_blank"></a>
                               </div>
                                 <div class="footer-socila-icon">
                                     <span>Follow Us</span>
