--- a/www.pbssoft.com/www.pbssoft.com/courses-offering.html
+++ b/www.pbssoft.com/www.pbssoft.com/courses-offering.html
@@ -1360,7 +1360,7 @@ background: #FFF;
 <div id="carouselExampleControls" class="carousel banner-slide1" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 lazyload" data-src="assets/frontend/images/bg1.jpg" alt="First slide"
+      <img class="d-block w-100 lazyload" data-src="assets/frontend/images/bg1.png" alt="First slide"
         loading="lazy" style="height: 150px;">
       <div class="carousel-caption sub-banner-caption d-md-block">
         <h2 class="wow fadeInUp animated" style="visibility: visible;"><b class="text-white">Courses</b></h2>
@@ -1447,7 +1447,7 @@ background: #FFF;
                   <a href="spring-boot-microservices-online-training.html" tabindex="0">
                     <img data-src="uploads/course/spring-boot-microservices-online-training.jpeg" alt="java project"
                       title="Spring Boot & Microservices" class=" lazyloaded" loading="lazy"
-                      src="uploads/course/spring-boot-microservices-online-training.jpg">
+                      src="uploads/course/spring-boot-microservices-online-training.png">
                   </a>
                 </div>
                 <div class="course-main-content clearfix">
@@ -1535,7 +1535,7 @@ background: #FFF;
                   <a href="java-fullstack-developer-course.html" tabindex="0">
                     <img data-src="uploads/course/java-fullstack-development-online-training.jpeg" alt="Java Fullstack Developer "
                       title="Java Fullstack Developer Course " class=" lazyloaded" loading="lazy"
-                      src="uploads/course/java-fullstack-development-online-training.jpg">
+                      src="uploads/course/java-fullstack-development-online-training.png">
                   </a>
                 </div>
                 <div class="course-main-content clearfix">
@@ -2083,7 +2083,7 @@ background: #FFF;
                   <a href="devops-with-aws-online-training.html" tabindex="0">
                     <img data-src="uploads/course/devops-with-aws-online-training.jpeg" alt="0"
                       title="DevOps with AWS" class=" lazyloaded" loading="lazy"
-                      src="uploads/course/devops-with-aws-online-training.jpg">
+                      src="uploads/course/devops-with-aws-online-training.png">
                   </a>
                 </div>
                 <div class="course-main-content clearfix">
